kubernetes/apps/uxi/ptr/zone-workers/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: uxi-ptr-zone-workers
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: uxi-ptr-server
      app.kubernetes.io/component: zone-worker
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 21019
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: uxi-nats
          podSelector:
            matchLabels:
              app.kubernetes.io/name: nats
              app.kubernetes.io/instance: nats
              app.kubernetes.io/component: nats
      ports:
        - protocol: TCP
          port: 4222
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: uxi-ptr-server
              app.kubernetes.io/component: api
      ports:
        - protocol: TCP
          port: 21017
